--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
       //		and upload this HTML file to the same folder.
       // 9.	To load your JSON in an external file, we'll overwrite the local JSON above.
       // 		First add a word to the following line that says this function will operate asynchronously.
-      buildCardsFromData = () => {
+      buildCardsFromData = async() => {
       	// 10.	Put the word "await" before any command that requires waiting for data to load.
       	// 11.	Fetch the JSON file name you used above (must be in the same folder).
-      	// let response = _____ fetch(______________) ;
+      	let response = await fetch("sample.json") ;
       	// 12.	Add a method that converts the response to JSON. Make this call asynchronous too.
-      	// let cardsJSON = _____ response.____() ;
+      	let cardsJSON = await response.json() ;
       	// From here down, everything is client-side, so we don't need the "await" keyword anymore.
       	// We'll make cards from each item in our cardsJSON array.
       	// Below is a quick-and-dirty way to make divs from your JSON,
